hphp/test/zend/bad/errmsg_018.php
<?php

class test {
	static abstract function foo ();
}

echo "Done\n";
?>